// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 0 for no item 1`] = `
<div>
  <h4>
    viewing 
    0
     expenses totalling 
    $0.00
     
  </h4>
</div>
`;

exports[`should render for 1 item 1`] = `
<div>
  <h4>
    viewing 
    1
     expenses totalling 
    $1.95
     
  </h4>
</div>
`;

exports[`should render multiple item 1`] = `
<div>
  <h4>
    viewing 
    3
     expenses totalling 
    $1,141.95
     
  </h4>
</div>
`;
